--- a/entries/07.10.18.md
+++ b/entries/07.10.18.md
@@ -1,1 +1,8 @@
 
+Today, I start this blog thing.
+
+The core idea is to document tech work so that:
+- It can serve as a reference later on
+- It can help others with similar difficulties
+- Bring credit and recognition to my skills
+
