entries/07.10.18.md updated from https://stackedit.io/

--- a/entries/07.10.18.md
+++ b/entries/07.10.18.md
@@ -6,3 +6,10 @@ The core idea is to document tech work so that:
 - It can help others with similar difficulties
 - Bring credit and recognition to my skills
 
+I have privacy concerns - to keep things simple, I might just put all the personal and other non-tech stuff (in which I would be identifiable) in another blog.
+
+The content is hosted on github. It can be edited online through stackedit.io or prose.io
+
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbMTE1OTEyNzk3Nl19
+-->
