entries/07.10.18.md updated from https://stackedit.io/

--- a/entries/07.10.18.md
+++ b/entries/07.10.18.md
@@ -1,3 +1,4 @@
+## The blog thing
 
 Today, I start this blog thing.
 
@@ -8,8 +9,12 @@ The core idea is to document tech work so that:
 
 I have privacy concerns - to keep things simple, I might just put all the personal and other non-tech stuff (in which I would be identifiable) in another blog.
 
-The content is hosted on github. It can be edited online through stackedit.io or prose.io
+The content is hosted on github. It can be edited online through stackedit.io or prose.io.
 
+I have yet to see how I will be pulishing it. Maybe Jeckyll, I guess.
+
+
+## LDAP on Debian
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE1OTEyNzk3Nl19
+eyJoaXN0b3J5IjpbLTc1Mzc4NTE3M119
 -->
