entries/07.10.18.md updated from https://stackedit.io/

--- a/entries/07.10.18.md
+++ b/entries/07.10.18.md
@@ -7,7 +7,7 @@ The core idea is to document tech work so that:
 - It can help others with similar difficulties
 - Bring credit and recognition to my skills
 
-I have privacy concerns - to keep things simple, I might just put all the personal and other non-tech stuff (in which I would be identifiable) in another blog.
+I have privacy concerns - to keep things simple, I might just put all the personal and other non-tech stuff in another blog.
 
 The content is hosted on github. It can be edited online through stackedit.io or prose.io.
 
@@ -16,7 +16,7 @@ I have yet to see how I will be pulishing it. Maybe Jeckyll, I guess.
 
 ## LDAP on Debian
 
-I
+After setting up a mail server using [Thomas Leister's great article](https://thomas-leister.de/en/mailserver-debian-stretch/), I started looking into LDAP for 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMjQwMzExMDBdfQ==
+eyJoaXN0b3J5IjpbLTQ1OTQ2MzQ1OV19
 -->
