entries/07.10.18.md updated from https://stackedit.io/

--- a/entries/07.10.18.md
+++ b/entries/07.10.18.md
@@ -16,7 +16,9 @@ I have yet to see how I will be pulishing it. Maybe Jeckyll, I guess.
 
 ## LDAP on Debian
 
-After setting up a mail server using [Thomas Leister's great article](https://thomas-leister.de/en/mailserver-debian-stretch/), I started looking into LDAP for 
+After setting up a mail server using [Thomas Leister's great article](https://thomas-leister.de/en/mailserver-debian-stretch/), I started looking into LDAP, mainly for storing user passwords.
+
+Yesterday, I managed to set up a basic LDAP service (slapd).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ1OTQ2MzQ1OV19
+eyJoaXN0b3J5IjpbLTEwNjk2OTE5NDhdfQ==
 -->
