entries/07.10.18.md updated from https://stackedit.io/

--- a/entries/07.10.18.md
+++ b/entries/07.10.18.md
@@ -18,7 +18,9 @@ I have yet to see how I will be pulishing it. Maybe Jeckyll, I guess.
 
 After setting up a mail server using [Thomas Leister's great article](https://thomas-leister.de/en/mailserver-debian-stretch/), I started looking into LDAP, mainly for storing user passwords.
 
-Yesterday, I managed to set up a basic LDAP service (slapd).
+Yesterday, I managed to set up a rudimentary LDAP service (slapd).
+
+As next step, I'm looking into LDAP clients
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNjk2OTE5NDhdfQ==
+eyJoaXN0b3J5IjpbMTMzNzAwOTgyXX0=
 -->
