entries/07.10.18.md updated from https://stackedit.io/

--- a/entries/07.10.18.md
+++ b/entries/07.10.18.md
@@ -20,7 +20,9 @@ After setting up a mail server using [Thomas Leister's great article](https://th
 
 Yesterday, I managed to set up a rudimentary LDAP service (slapd).
 
-As next step, I'm looking into LDAP clients
+As a next step, I'm looking into LDAP clients to experiment with it.
+
+I installed 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMzNzAwOTgyXX0=
+eyJoaXN0b3J5IjpbLTc4NjA4NDQ5MV19
 -->
