entries/07.10.18.md updated from https://stackedit.io/

--- a/entries/07.10.18.md
+++ b/entries/07.10.18.md
@@ -9,9 +9,9 @@ The core idea is to document tech work so that:
 
 I have privacy concerns - to keep things simple, I might just put all the personal and other non-tech stuff in another blog.
 
-The content is hosted on github. It can be edited online through stackedit.io or prose.io.
+The content is hosted on github. It can be edited online through stackedit.io or prose.io
 
-I have yet to see how I will be pulishing it. Maybe Jeckyll, I guess.
+I have yet to see how I will be publishing it. Maybe Jeckyll.
 
 
 ## LDAP on Debian
@@ -22,7 +22,7 @@ Yesterday, I managed to set up a rudimentary LDAP service (slapd).
 
 As a next step, I'm looking into LDAP clients to experiment with it.
 
-I installed 
+I installed phpldapadmin and am in the process of configuring /etc/phpldapadmin/config.php 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc4NjA4NDQ5MV19
+eyJoaXN0b3J5IjpbLTIwOTQwNjY0NzhdfQ==
 -->
