--- a/entries/07.10.18.md
+++ b/entries/07.10.18.md
@@ -9,7 +9,7 @@ The core idea is to document tech work so that:
 
 I have privacy concerns - to keep things simple, I might just put all the personal and other non-tech stuff in another blog.
 
-The content is hosted on github. It can be edited online through stackedit.io or prose.io
+The content is hosted on github. It can be edited online through stackedit.io or prose.io. I prefer prose.io. stackedit.io seems to leave some unwanted metadata at the bottom of the file. 
 
 I have yet to see how I will be publishing it. Maybe Jeckyll.
 
