--- a/entries/07.10.18.md
+++ b/entries/07.10.18.md
@@ -26,4 +26,7 @@ I installed phpldapadmin and am in the process of configuring /etc/phpldapadmin/
 
 First, the obvious; I replace all instances of (dc=example,dc=com) with my domain. Then I enable long through `bind_id`. I'm following [these instructions](https://www.digitalocean.com/community/tutorials/how-to-install-and-configure-openldap-and-phpldapadmin-on-ubuntu-16-04) (despite being on Debian 9.5 (stretch)).
 
+I also reoved the annoying template warnings (hide_template_warning).
+
+I create a pretty standard nginx virtual host, and add SSL certificate using certbot.
 
