--- a/entries/07.10.18.md
+++ b/entries/07.10.18.md
@@ -30,3 +30,8 @@ I also reoved the annoying template warnings (hide_template_warning).
 
 I create a pretty standard nginx virtual host, and add SSL certificate using certbot.
 
+Todo:
+ - Check LDAP Security - I think we have to disable "simple authentication"
+ - Do something useful with it (such as pam_ldap)
+ - Test
+
