Update and cleanup

--- a/_posts/2018-10-09-.md
+++ b/_posts/2018-10-09-.md
@@ -46,3 +46,8 @@ Send SMS # 0:
 This worked.
 
 Then I tried to send SMS and to my number and receive them on the computer, but it seems that Android gets a hold of them and they never get to the computer. I guess I'll need a dedicated GSM modem for that.
+
+
+## Trying again with Jekyll
+
+I still have not managed to get a list of pages on my Jekyll blog. I remember that I did manage this in the past, somehow. Anyway I'll give up for now, I'm happy with how each individual page displays, and I'll patch up something to create an index later on, I guess.
