--- a/entries/2018-10-09-.md
+++ b/entries/2018-10-09-.md
@@ -51,3 +51,5 @@ Then I tried to send SMS and to my number and receive them on the computer, but 
 ## Trying again with Jekyll
 
 I still have not managed to get a list of pages on my Jekyll blog. I remember that I did manage this in the past, somehow. Anyway I'll give up for now, I'm happy with how each individual page displays, and I'll patch up something to create an index later on, I guess.
+
+This is really frustrating, now I'm getting a 404 for almost anything and cannot find a way to even display blog entriles by their URL. How unhelpful.
