--- a/entries/2018-10-09-.md
+++ b/entries/2018-10-09-.md
@@ -53,3 +53,5 @@ Then I tried to send SMS and to my number and receive them on the computer, but 
 I still have not managed to get a list of pages on my Jekyll blog. I remember that I did manage this in the past, somehow. Anyway I'll give up for now, I'm happy with how each individual page displays, and I'll patch up something to create an index later on, I guess.
 
 This is really frustrating, now I'm getting a 404 for almost anything and cannot find a way to even display blog entriles by their URL. How unhelpful.
+
+Since I gave up on Jekyll being useful, I reverted to my initial directory naming, maybe now it will work again, like it did initially. I guess `_post` has a special meaning.
