entries/2018-10-10-.md updated from https://stackedit.io/

--- a/entries/2018-10-10-.md
+++ b/entries/2018-10-10-.md
@@ -32,7 +32,18 @@ Badaboom           3cce5d75-528e-48aa-b51a-e8217e274483  802-11-wireless  --
 
 You can also type `nmcli connection` and will default to showing all connections. 
 
-< Insert some more stuff here >
+List devices
+```
+$ nmcli device 
+DEVICE           TYPE      STATE        CONNECTION 
+tun0             tun       connected    tun0       
+wlx0014d14c50b2  wifi      connected    Star Wars  
+enp0s25          ethernet  unavailable  --         
+lo               loopback  unmanaged    --         
+```
 
-`nmcli` commands can be abbreviated, for example `nmcli connection up 
+`nmcli` commands can be abbreviated, for example `nmcli device` can be written `nmcli dev` `nmcli connection up 
 MyWifi`  can be written `nmcli c u MyWifi`  (connection names cannot be abbreviated).
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbLTQ3ODk0Mjg5NV19
+-->
