entries/2018-10-10-.md updated from https://stackedit.io/

--- a/entries/2018-10-10-.md
+++ b/entries/2018-10-10-.md
@@ -42,8 +42,8 @@ enp0s25          ethernet  unavailable  --
 lo               loopback  unmanaged    --         
 ```
 
-`nmcli` commands can be abbreviated, for example `nmcli device` can be written `nmcli dev` `nmcli connection up 
+`nmcli` commands can be abbreviated, for example `nmcli device` can be written `nmcli dev` or even `nmcli d`. `nmcli connection up 
 MyWifi`  can be written `nmcli c u MyWifi`  (connection names cannot be abbreviated).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ3ODk0Mjg5NV19
+eyJoaXN0b3J5IjpbLTM1NTI4ODg4M119
 -->
