entries/2018-10-10-.md updated from https://stackedit.io/

--- a/entries/2018-10-10-.md
+++ b/entries/2018-10-10-.md
@@ -35,15 +35,16 @@ You can also type `nmcli connection` and will default to showing all connections
 List devices
 ```
 $ nmcli device 
-DEVICE           TYPE      STATE        CONNECTION 
-tun0             tun       connected    tun0       
-wlx0014d14c50b2  wifi      connected    Star Wars  
+DEVICE           TYPE      STATE        CONNECTION      
+wlx0014d14c50b2  wifi      connected    MyWifi  
 enp0s25          ethernet  unavailable  --         
 lo               loopback  unmanaged    --         
 ```
+Some of the possible states for devices are `connected`, `disconnected`, `unavailable` (if, for example, the cable is unplugged), `unmanaged`.
+
 
 `nmcli` commands can be abbreviated, for example `nmcli device` can be written `nmcli dev` or even `nmcli d`. `nmcli connection up 
 MyWifi`  can be written `nmcli c u MyWifi`  (connection names cannot be abbreviated).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM1NTI4ODg4M119
+eyJoaXN0b3J5IjpbLTE2OTE2NDI5MDIsLTM1NTI4ODg4M119
 -->
